Formatted Projects page, fixed languages & tools overlapping issue with z-indexing.

--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ h1, h2, h3 {
     display: flex;
     justify-content: center;
     padding: 30px 0;
+    z-index: 2;
 }
 
 #navbar a {
@@ -57,8 +58,17 @@ h1, h2, h3 {
 
 section {
     height: 100vh;
+}
+
+.flex-container {
     display: flex;
     gap: 30px;
+    flex-direction: row;
+    width: 100vw - 200px;
+}
+
+.block-container {
+    display: block;
 }
 
 h1 {
@@ -66,13 +76,19 @@ h1 {
 }
 
 .label {
-    font-size: 16px;
+    font-size: 14px;
     font-family: "questrial", sans-serif;
     font-weight: 400;
 }
 
 .subheading {
     padding-top: 25px;
+}
+
+#projects p {
+    font-size: 12px;
+    font-weight: lighter;
+    letter-spacing: .06em;
 }
 
 .column {
@@ -83,20 +99,75 @@ h1 {
     width: 50%;
 }
 
+.column-small {
+    width: 33%;
+}
+
+.column-large {
+    width: 67%;
+}
+
 #scroll-icon {
     margin-top: 100px;
 }
 
-.tool-container {
-    padding: 10px;
-    width: min-content;
-    height: auto;
+.bubble-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+    width: 100%;
+    max-width: 800px;
+    position: relative;
+    padding: 20px;
+    z-index: 1;
+}
+
+.bubble {
+    width: 100px;
+    height: 100px;
+    background-color: rgba(104, 84, 182, 0.267);
     border: solid 4px #6854b6;
-    border-radius: 10px;
+    border-radius: 50%; 
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transition: transform 0.2s ease-in-out;
+    position: relative;
+}
+
+.bubble i {
+    font-size: 20px;
+    color: #333;
+}
+
+.bubble:hover {
+    transform: scale(1.2);
 }
 
 .tool-icon {
-    width: 60px;
+    width: 50px;
     margin-bottom: 5px;
 }
+
+.thumbnail {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    width: 300px;
+    height: 150px;
+}
+
+.thumbnail img {
+    object-fit: cover;
+    min-width: 100%;
+    min-height: 100%
+}
+
+.linked-icon {
+    width: 30px;
+    margin: 0 5px 5px 0;
+}
+
